<resources>
    <string name="app_name">Tarique Application</string>
    <string name="welcome">Welcome !</string>
    <string name="select_subject">Select a subject to continue</string>
    <string name="database_system">Database System</string>
    <string name="operating_system">Operating System</string>
    <string name="performance_button">View all Performance</string>
    <string name="quiz_button">Take a quiz</string>
    <string name="notes_button">Access Notes</string>
    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="db_quiz">DataBase System Quiz (%1$d/%2$d)</string>
    <string name="os_quiz">Operating System Quiz (%1$d/%2$d)</string>
    <string name="result_text_view">RESULT</string>
    <string name="correct">Correct : (%1$d)</string>
    <string name="play_again">Play Again</string>
    <string name="home">Take me home</string>
</resources>